--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Burns Portfolio</title>
-    <link rel="stylesheet" type="text/css" href="assets/stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="Assets/stylesheet.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
