trivia game added

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
     <ul class="sidebar">
       <li>About</li>
-      <li id="nav-detail"><a href="portfolio.html" target=" blank">Portfolio</a></li>
+      <li id="nav-detail"><a href="portfolio.html">Portfolio</a></li>
       <li><a href="contact.html" target=" blank">Contact</a></li>
     </ul>
   </nav>
