--- a/portfolio.html
+++ b/portfolio.html
@@ -27,10 +27,10 @@
       <div class="heading-1"><h2>Portfolio</h2></div>
       <div class="flex-portfolio">
         <div class="business pictures">
-          <div class="text_position">Business</div>
+          <div class="text_position"><a href="https://btburns10.github.io/TriviaGame/" target="_blank" style="color: white">Trivia</a></div>
         </div>
         <div class="photography pictures">
-          <div class="text_position"><a href="https://btburns10.github.io/unit-4-game/" target=" blank" "color: white" style="color:white;">Crystal Game</a></div>
+          <div class="text_position"><a href="https://btburns10.github.io/unit-4-game/" target="_blank" style="color:white">Crystal Game</a></div>
         </div>
         <div class="mobile pictures">
           <div class="text_position">Mobile</div>
