giphy app added

--- a/portfolio.html
+++ b/portfolio.html
@@ -33,7 +33,7 @@
           <div class="text_position"><a href="https://btburns10.github.io/unit-4-game/" target="_blank" style="color:white">Crystal Game</a></div>
         </div>
         <div class="mobile pictures">
-          <div class="text_position">Mobile</div>
+          <div class="text_position"><a href="https://btburns10.github.io/GifTastic/" target="_blank" style="color:white">Moody Gif</a></div>
         </div>
         <div class="desktop pictures">
           <div class="text_position">Desktop</div>
