train app added

--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,7 @@
           <div class="text_position"><a href="https://btburns10.github.io/GifTastic/" target="_blank" style="color:white">Moody Gif</a></div>
         </div>
         <div class="desktop pictures">
-          <div class="text_position">Desktop</div>
+          <div class="text_position"><a href="https://btburns10.github.io/Train-Scheduler/" target="_blank" style="color:white">Train App</a></div>
         </div>
       </div>
     </div>
