friend finder app added

--- a/portfolio.html
+++ b/portfolio.html
@@ -38,6 +38,9 @@
         <div class="desktop pictures">
           <div class="text_position"><a href="https://btburns10.github.io/Train-Scheduler/" target="_blank" style="color:white">Train App</a></div>
         </div>
+        <div class="friend-finder pictures">
+          <div class="text_position"><a href="https://serene-hamlet-10284.herokuapp.com/" target="_blank" style="color:white">Friend Finder</a></div>
+        </div>
       </div>
     </div>
   </div>
