food lovers and burger app added

--- a/portfolio.html
+++ b/portfolio.html
@@ -35,11 +35,14 @@
         <div class="mobile pictures">
           <div class="text_position"><a href="https://btburns10.github.io/GifTastic/" target="_blank" style="color:white">Moody Gif</a></div>
         </div>
-        <div class="desktop pictures">
-          <div class="text_position"><a href="https://btburns10.github.io/Train-Scheduler/" target="_blank" style="color:white">Train App</a></div>
+        <div class="food-lovers pictures">
+          <div class="text_position"><a href="https://btburns10.github.io/Food-Lovers/" target="_blank" style="color:white">Food Lovers</a></div>
         </div>
         <div class="friend-finder pictures">
           <div class="text_position"><a href="https://serene-hamlet-10284.herokuapp.com/" target="_blank" style="color:white">Friend Finder</a></div>
+        </div>
+        <div class="burger-app pictures">
+          <div class="text_position"><a href="https://infinite-meadow-92406.herokuapp.com/" target="_blank" style="color:white">Burger App</a></div>
         </div>
       </div>
     </div>
